--- a/Favoriteplace/favoriteplace.css
+++ b/Favoriteplace/favoriteplace.css
@@ -4,5 +4,5 @@ body{
     background-attachment:fixed;
  }
 .card{
-   background-color: rgba(24, 24, 21, 0.285);
+   background-color: rgba(24, 24, 21);
 }
